<?xml version="1.0"?>
<package>
  <name>qviz_demo</name>
  <version>1.0.0</version>
  <description>

     This Application is based on librviz, in addition to providing basic data visualization capabilities, you can also use this application to manipulate 2D maps(yaml file).

  </description>
  <maintainer email="ymgogre@gmail.com">xjy</maintainer>
  <author>xjy</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <build_depend>map_server</build_depend>
  <run_depend>map_server</run_depend>

 
</package>
